Include a post-hoc layer

--- a/TermDepositMarketing.ipynb
+++ b/TermDepositMarketing.ipynb
@@ -2004,9 +2004,412 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "35c1c26c-ed91-48fa-9d16-b1c604a267ac",
+   "metadata": {},
+   "source": [
+    "#### Note on DummyClassifier:\n",
+    "Although the DummyClassifier achieves high accuracy (~93%) by always predicting the majority class (0), \n",
+    "its Balanced Accuracy is only 0.50, revealing that it completely fails to identify the minority class (1).\n",
+    "Balanced Accuracy provides a more truthful measure of performance for highly inbalanced sets.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35299dae-bddd-408b-87a9-8904d01e8131",
+   "metadata": {},
+   "source": [
+    "Let's check how it performs with cross-validation accuracy using 5 folds on the same split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "ce0e94d6-3121-4fb3-b5c3-c4b8d43e7e58",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9451551e732d449e9acda4a092090023",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/31 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[LightGBM] [Info] Number of positive: 11873, number of negative: 11872\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000441 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Total Bins 589\n",
+      "[LightGBM] [Info] Number of data points in the train set: 23745, number of used features: 7\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.500021 -> initscore=0.000084\n",
+      "[LightGBM] [Info] Start training from score 0.000084\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dc85c37a09714f99befb72d7d6d897ca",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/31 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[LightGBM] [Info] Number of positive: 11872, number of negative: 11873\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000444 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Total Bins 589\n",
+      "[LightGBM] [Info] Number of data points in the train set: 23745, number of used features: 7\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.499979 -> initscore=-0.000084\n",
+      "[LightGBM] [Info] Start training from score -0.000084\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ad81c12fa87e402b9f1a94fba1a44d95",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/31 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[LightGBM] [Info] Number of positive: 11873, number of negative: 11873\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000364 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Total Bins 589\n",
+      "[LightGBM] [Info] Number of data points in the train set: 23746, number of used features: 7\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.500000 -> initscore=0.000000\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4ec10dbddb294f058a4db94f441d41ae",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/31 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[LightGBM] [Info] Number of positive: 11873, number of negative: 11873\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000396 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Total Bins 589\n",
+      "[LightGBM] [Info] Number of data points in the train set: 23746, number of used features: 7\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.500000 -> initscore=0.000000\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "20fcb4caf2f34aa69369c5c84a874aa3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/31 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[LightGBM] [Info] Number of positive: 11873, number of negative: 11873\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000336 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Total Bins 589\n",
+      "[LightGBM] [Info] Number of data points in the train set: 23746, number of used features: 7\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.500000 -> initscore=0.000000\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mean Accuracy</th>\n",
+       "      <th>Std Accuracy</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Model</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>ExtraTreesClassifier</th>\n",
+       "      <td>0.97</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RandomForestClassifier</th>\n",
+       "      <td>0.96</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BaggingClassifier</th>\n",
+       "      <td>0.96</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DecisionTreeClassifier</th>\n",
+       "      <td>0.95</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ExtraTreeClassifier</th>\n",
+       "      <td>0.95</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>XGBClassifier</th>\n",
+       "      <td>0.91</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>KNeighborsClassifier</th>\n",
+       "      <td>0.89</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LabelPropagation</th>\n",
+       "      <td>0.89</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LabelSpreading</th>\n",
+       "      <td>0.88</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LGBMClassifier</th>\n",
+       "      <td>0.87</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SVC</th>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AdaBoostClassifier</th>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NuSVC</th>\n",
+       "      <td>0.82</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CalibratedClassifierCV</th>\n",
+       "      <td>0.81</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LinearSVC</th>\n",
+       "      <td>0.81</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LogisticRegression</th>\n",
+       "      <td>0.81</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LinearDiscriminantAnalysis</th>\n",
+       "      <td>0.80</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RidgeClassifier</th>\n",
+       "      <td>0.80</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RidgeClassifierCV</th>\n",
+       "      <td>0.80</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NearestCentroid</th>\n",
+       "      <td>0.80</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SGDClassifier</th>\n",
+       "      <td>0.80</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>QuadraticDiscriminantAnalysis</th>\n",
+       "      <td>0.80</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GaussianNB</th>\n",
+       "      <td>0.79</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BernoulliNB</th>\n",
+       "      <td>0.78</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Perceptron</th>\n",
+       "      <td>0.74</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PassiveAggressiveClassifier</th>\n",
+       "      <td>0.70</td>\n",
+       "      <td>0.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DummyClassifier</th>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               Mean Accuracy  Std Accuracy\n",
+       "Model                                                     \n",
+       "ExtraTreesClassifier                    0.97          0.00\n",
+       "RandomForestClassifier                  0.96          0.00\n",
+       "BaggingClassifier                       0.96          0.00\n",
+       "DecisionTreeClassifier                  0.95          0.00\n",
+       "ExtraTreeClassifier                     0.95          0.00\n",
+       "XGBClassifier                           0.91          0.00\n",
+       "KNeighborsClassifier                    0.89          0.00\n",
+       "LabelPropagation                        0.89          0.00\n",
+       "LabelSpreading                          0.88          0.00\n",
+       "LGBMClassifier                          0.87          0.00\n",
+       "SVC                                     0.83          0.00\n",
+       "AdaBoostClassifier                      0.83          0.00\n",
+       "NuSVC                                   0.82          0.00\n",
+       "CalibratedClassifierCV                  0.81          0.00\n",
+       "LinearSVC                               0.81          0.00\n",
+       "LogisticRegression                      0.81          0.00\n",
+       "LinearDiscriminantAnalysis              0.80          0.00\n",
+       "RidgeClassifier                         0.80          0.00\n",
+       "RidgeClassifierCV                       0.80          0.00\n",
+       "NearestCentroid                         0.80          0.00\n",
+       "SGDClassifier                           0.80          0.00\n",
+       "QuadraticDiscriminantAnalysis           0.80          0.00\n",
+       "GaussianNB                              0.79          0.00\n",
+       "BernoulliNB                             0.78          0.00\n",
+       "Perceptron                              0.74          0.01\n",
+       "PassiveAggressiveClassifier             0.70          0.05\n",
+       "DummyClassifier                         0.50          0.00"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from lazypredict.Supervised import LazyClassifier\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Setup Stratified 5-Fold CV\n",
+    "kf = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "\n",
+    "# Store accuracy scores from each fold\n",
+    "scores = []\n",
+    "\n",
+    "for train_idx, val_idx in kf.split(X_resampled, y_resampled):\n",
+    "    X_train_cv, X_val_cv = X_resampled.iloc[train_idx], X_resampled.iloc[val_idx]\n",
+    "    y_train_cv, y_val_cv = y_resampled.iloc[train_idx], y_resampled.iloc[val_idx]\n",
+    "\n",
+    "    clf = LazyClassifier(verbose=0, ignore_warnings=True)\n",
+    "    models, _ = clf.fit(X_train_cv, X_val_cv, y_train_cv, y_val_cv)\n",
+    "\n",
+    "    scores.append(models['Accuracy'])\n",
+    "\n",
+    "# Combine fold scores into a DataFrame\n",
+    "scores_df = pd.concat(scores, axis=1)\n",
+    "scores_df.columns = [f'Fold {i+1}' for i in range(len(scores))]\n",
+    "\n",
+    "# Compute Mean and Std Dev\n",
+    "scores_df['Mean Accuracy'] = scores_df.mean(axis=1)\n",
+    "scores_df['Std Accuracy'] = scores_df.std(axis=1)\n",
+    "\n",
+    "# Sort by Mean Accuracy\n",
+    "scores_df = scores_df.sort_values('Mean Accuracy', ascending=False)\n",
+    "\n",
+    "# Show result\n",
+    "display(scores_df[['Mean Accuracy', 'Std Accuracy']])\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "653ecda3-98b6-4f88-950f-46df9d72607a",
+   "id": "51812877-1b1c-4023-a49f-33f160d2337c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2014,7 +2417,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d9f6578-deb0-4e0d-9227-d0be5e28808c",
+   "id": "85edaafd-750c-460c-93f2-9a0f6bfa5d41",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42dc2b78-18ed-49c4-ae0d-0a241967dbdc",
    "metadata": {},
    "outputs": [],
    "source": []
