Ajust the notebook part1 visualization

--- a/TermDepositMarketing.ipynb
+++ b/TermDepositMarketing.ipynb
@@ -94,12 +94,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": null,
    "id": "c8643d31-f522-41c4-8213-a4d5889b977d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('term-deposit-marketing-2020.csv')"
+    "df = pd.read_csv('term-deposit-marketing.csv')"
    ]
   },
   {
