Update explanation texts

--- a/TermDepositMarketing.ipynb
+++ b/TermDepositMarketing.ipynb
@@ -5624,6 +5624,32 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9d9d8fab",
+   "metadata": {},
+   "source": [
+    "### Why is the threshold important?\n",
+    "\n",
+    "The decision threshold is a critical tuning lever that determines the trade-off between:\n",
+    "\n",
+    "- Minimizing false positives (calling fewer people, but risking missing real subscribers).\n",
+    "- Minimizing false negatives (capturing more real subscribers, but calling more people overall).\n",
+    "\n",
+    "These are two competing strategies:\n",
+    "- **High threshold (>0.8)**:\n",
+    "    - Calls only the most likely subscribers.\n",
+    "    - Very high precision, but low recall. Many subscribers are missed.\n",
+    "\n",
+    "- **Low threshold (<0.1)**:\n",
+    "    - Calls almost everyone with a hint of interest.\n",
+    "    - High recall, but low precision. Most calls are wasted.\n",
+    "\n",
+    "Our selected threshold (0.19) offers a balanced trade-off, where the model is neither too conservative nor too aggressive. This is an example of how our system can adapt its strategy based on operational goals: prioritizing precision, recall, or balance depending on business constraints.\n",
+    "\n",
+    "----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5d9ba035-c5e7-47a1-b6fa-c2df1811ad89",
    "metadata": {},
    "source": [
@@ -5658,22 +5684,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 2,
    "id": "f55ed06b-f7b8-4a24-8ad1-d13a5515b6d5",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Baseline strategy (no model): \t\t\t13.8 calls per positive subscription\n",
-      "Model-based strategy (at threshold=0.16):\t4.5 calls per positive subscription\n"
+     "ename": "NameError",
+     "evalue": "name 'ratio_baseline_to_positives' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBaseline strategy (no model): \u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mratio_baseline_to_positives\u001b[49m\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.1f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m calls per positive subscription\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mModel-based strategy (at threshold=0.19):\u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00mratio_model_calls_to_tp\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.1f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m calls per positive subscription\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'ratio_baseline_to_positives' is not defined"
      ]
     }
    ],
    "source": [
     "print(f\"Baseline strategy (no model): \\t\\t\\t{ratio_baseline_to_positives:.1f} calls per positive subscription\")\n",
-    "print(f\"Model-based strategy (at threshold=0.16):\\t{ratio_model_calls_to_tp:.1f} calls per positive subscription\")\n"
+    "print(f\"Model-based strategy (at threshold=0.19):\\t{ratio_model_calls_to_tp:.1f} calls per positive subscription\")\n"
    ]
   },
   {
@@ -5690,38 +5719,6 @@
    "metadata": {},
    "source": [
     "----"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d29c9202-386e-4d70-925c-f9791c56ac63",
-   "metadata": {},
-   "source": [
-    "### Why is the threshold important?\n",
-    "\n",
-    "The decision threshold is a critical tuning lever that determines the trade-off between:\n",
-    "\n",
-    "- Minimizing false positives (calling fewer people, but risking missing real subscribers).\n",
-    "- Minimizing false negatives (capturing more real subscribers, but calling more people overall).\n",
-    "\n",
-    "These are two competing strategies:\n",
-    "- **High threshold (>0.8)**:\n",
-    "    - Calls only the most likely subscribers.\n",
-    "    - Very high precision, but low recall. Many subscribers are missed.\n",
-    "\n",
-    "- **Low threshold (<0.1)**:\n",
-    "    - Calls almost everyone with a hint of interest.\n",
-    "    - High recall, but low precision. Most calls are wasted.\n",
-    "\n",
-    "Our selected threshold (0.19) offers a balanced trade-off, where the model is neither too conservative nor too aggressive. This is an example of how our system can adapt its strategy based on operational goals: prioritizing precision, recall, or balance depending on business constraints."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "de26c9cf-b110-416b-a6ef-afa31c989ae4",
-   "metadata": {},
-   "source": [
-    "----\n"
    ]
   },
   {
@@ -5791,8 +5788,8 @@
    "metadata": {},
    "source": [
     "Using the model reduces the total calling time from ~2 million seconds to ~153k seconds, a **2.85× improvement in time efficiency**.\n",
-    "- Without the model: ~3,423 seconds spent per subscriber.\n",
-    "- With the model: Only ~1,202 seconds per subscriber.\n",
+    "- Without the model: ~3,423 seconds spent per subscriber (~57 minutes).\n",
+    "- With the model: Only ~1,202 seconds per subscriber (~20 minutes).\n",
     "\n",
     "This means we are reaching the same number of subscribers while spending almost the third part of the time on calls, drastically improving operational efficiency."
    ]
