Adjust the part 2 visualization

--- a/TermDepositMarketing_part2b.ipynb
+++ b/TermDepositMarketing_part2b.ipynb
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 60,
    "id": "e33a59ff",
    "metadata": {},
    "outputs": [
@@ -710,31 +710,31 @@
       "\n",
       "Value counts for 'job':\n",
       "              job  count\n",
-      "0     blue-collar   9383\n",
-      "1      management   8166\n",
-      "2      technician   6852\n",
-      "3           admin   4483\n",
-      "4        services   3910\n",
-      "5         retired   1437\n",
-      "6   self-employed   1414\n",
-      "7    entrepreneur   1405\n",
-      "8      unemployed   1104\n",
-      "9       housemaid   1087\n",
-      "10        student    524\n",
-      "11        unknown    235\n",
+      "0      management    676\n",
+      "1     blue-collar    535\n",
+      "2      technician    497\n",
+      "3           admin    351\n",
+      "4        services    238\n",
+      "5         retired    151\n",
+      "6   self-employed    112\n",
+      "7      unemployed     96\n",
+      "8    entrepreneur     88\n",
+      "9         student     82\n",
+      "10      housemaid     53\n",
+      "11        unknown     17\n",
       "\n",
       "Value counts for 'marital':\n",
       "    marital  count\n",
-      "0   married  24386\n",
-      "1    single  10889\n",
-      "2  divorced   4725\n",
+      "0   married   1478\n",
+      "1    single   1027\n",
+      "2  divorced    391\n",
       "\n",
       "Value counts for 'education':\n",
       "   education  count\n",
-      "0  secondary  20993\n",
-      "1   tertiary  11206\n",
-      "2    primary   6270\n",
-      "3    unknown   1531\n"
+      "0  secondary   1418\n",
+      "1   tertiary   1029\n",
+      "2    primary    353\n",
+      "3    unknown     96\n"
      ]
     }
    ],
@@ -744,10 +744,11 @@
     "    print(f\"\\nValue counts for '{col}':\")\n",
     "    print(con.execute(f\"\"\"\n",
     "        SELECT {col}, COUNT(*) AS count \n",
-    "        FROM term_deposit \n",
+    "        FROM term_deposit_clean \n",
+    "        WHERE target = TRUE\n",
     "        GROUP BY {col} \n",
     "        ORDER BY count DESC\n",
-    "    \"\"\").fetchdf())\n",
+    "\"\"\").fetchdf())\n",
     "\n"
    ]
   },
